# fastapi-amis-admin

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.en.md  README.md  README.zh.md  SECURITY.md  index.html  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build-docs.yml  pytest.yml  python-publish.yml
.github/工作流/: python-publish.yml
about/: index.html
amis/types/: index.html
amis_admin/AdminApp/: index.html
amis_admin/AdminGroup/: index.html
amis_admin/AdminSite/: index.html
amis_admin/BaseAdmin/: index.html
amis_admin/FormAdmin/: index.html
amis_admin/ModelAction/: index.html
amis_admin/ModelAdmin/: index.html
amis_admin/PageAdmin/: index.html
amis_admin/PageSchemaAdmin/: index.html
amis_admin/RouterAdmin/: index.html
amis_admin/Settings/: index.html
amis_admin/TemplateAdmin/: index.html
crud/BaseCrud/: index.html
crud/RouterMixin/: index.html
crud/SQLModelCrud/: index.html
demo/: admisadmin.db  demo-form.py  demo-model.py  demo-simple.py
docs/en/: mkdocs.yml
docs/en/docs/: about.md  index.md
docs/zh/: mkdocs.yml
docs/zh/docs/: CNAME  about.md  index.md  release.md
extended/SQLModel/: index.html
extended/about/: index.html
extended/alembic/: index.html
fastapi_amis_admin/: __init__.py
fastapi_amis_admin/admin/: __init__.py  admin.py  handlers.py  parser.py  settings.py  site.py
fastapi_amis_admin/admin/extensions/: admin.py  schemas.py  utils.py
fastapi_amis_admin/amis/: README.md  __init__.py  components.py  constants.py  types.py  utils.py
fastapi_amis_admin/amis/templates/: app.html  page.html
fastapi_amis_admin/amis_admin/: __init__.py  admin.py  parser.py  settings.py  site.py
fastapi_amis_admin/crud/: README.md  __init__.py  _sqlalchemy.py  _sqlmodel.py  base.py  parser.py  schema.py  utils.py
fastapi_amis_admin/fastapi_crud/: README.md  __init__.py  _base.py  _sqlmodel.py  parser.py  schema.py  utils.py
fastapi_amis_admin/globals/: __init__.py  _db.py  _sites.py  core.py  db.py  deps.py  sites.py
fastapi_amis_admin/models/: __init__.py  _sqlmodel.py  _sqltypes.py  enums.py  fields.py  sqltypes.py
fastapi_amis_admin/utils/: database.py  db.py  functools.py  pydantic.py  translation.py
js/: chat.js
search/: search_index.json
tests/: conftest.py  db.py  models.py
tests/models/: schemas.py  sqla.py  sqla2.py  sqlm.py
tests/test_admin/: conftest.py  test_AdminApp.py  test_AdminGroup.py  test_FormAdmin.py  test_ModelAdmin.py  test_admin.py  test_parser.py  test_settings.py
tests/test_admin/test_extensions/: test_BaseAuthFieldModelAdmin.py
tests/test_amis/: test_amis.py
tests/test_crud/: conftest.py  db.py  main.py  models.py  test_Mapper_Events.py  test_SQLModelCrud_fields.py  test_SQLModelCrud_routes_async.py  test_SQLModelCrud_routes_sync.py  test_SQLModelCrud_schemas.py  test_SQLModelSelector.py  test_SqlalchemyCrud_fields.py  test_SqlalchemyCrud_routes_async.py  test_SqlalchemyCrud_routes_sync.py  test_SqlalchemyCrud_schemas.py  test_SqlalchemySelector.py  test_crud.py  test_fake_users.py  test_models.py
tests/test_globals/: test_db.py  test_sites.py
tests/test_globals/test_faa_globals/: globals.py  test_faa_globals.py
tests/test_sqlalchemy/: conftest.py  models.py  test_fake_users.py
tests/test_sqlmodel/: conftest.py  test_Mapper_Events.py  test_ModelAdmin.py  test_SQLModelCrud_fields.py  test_SQLModelCrud_routes_async.py  test_SQLModelCrud_routes_sync.py  test_SQLModelCrud_schemas.py  test_SQLModelSelector.py
tests/test_utils/: test_pydantic.py
tutorials/advanced/AdminApp/: index.html
tutorials/advanced/_more/: index.html
tutorials/advanced/cli/: index.html
tutorials/advanced/debug/: index.html
tutorials/advanced/permission/: index.html
tutorials/advanced/scheduler/: index.html
tutorials/advanced/structure/: index.html
tutorials/advanced/user-auth/: index.html
tutorials/basic/FormAdmin/: index.html
tutorials/basic/Inheritance/: index.html
tutorials/basic/ModelAction/: index.html
tutorials/basic/ModelAdmin/: index.html
tutorials/basic/PageAdmin/: index.html
tutorials/basic/Settings/: index.html
tutorials/basic/TemplateAdmin/: index.html
tutorials/basic/_more/: index.html
tutorials/basic/i18n/: index.html
tutorials/quickstart/: index.html
utils/database/: index.html
zh/: 404.html  index.html  sitemap.xml
zh/about/: index.html
zh/amis/types/: index.html
zh/amis_admin/AdminApp/: index.html
zh/amis_admin/AdminGroup/: index.html
zh/search/: search_index.json
(+118 files in other folders)
